--- a/themes/zephyr/front-end/src/components/footer-component/index.html
+++ b/themes/zephyr/front-end/src/components/footer-component/index.html
@@ -1,12 +1,13 @@
 <meta charset="UTF-8">
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
+<div smooth-scroll-container="">
 
 <footer>
   <div class="container">
     <div class="footer-content">
       <!--        logo and copy right-->
-      <div class="logo-and-copy">
+      <div class="logo-and-copy iv-st-from-bottom">
         <a href="#">
           <img src="../../html/images/logo.png" alt="logo.png">
         </a>
@@ -16,14 +17,14 @@
       </div>
       <!--      links-->
       <div class="links">
-        <div class="title-and-link newsletter">
+        <div class="title-and-link iv-st-from-bottom  newsletter">
           <h3 class="headline-7">JOIN OUR NEWSLETTER</h3>
           <input type="email" placeholder="Email">
           <a class="btn has-bg" href="#">Submit</a>
         </div>
-        <div class="title-and-link social">
-          <h3 class="headline-7 mobile-only">FOLLOW</h3>
-          <h3 class="headline-7 desktop-only">SOCIAL</h3>
+        <div class="title-and-link iv-st-from-bottom  social">
+          <h3 class="headline-7 mobile">FOLLOW</h3>
+          <h3 class="headline-7 desktop">SOCIAL</h3>
           <div class="icons mobile-only">
             <a class="icon" href="#">
               <svg class="tw" width="25" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +49,7 @@
           </div>
 
         </div>
-        <div class="title-and-link legal">
+        <div class="title-and-link iv-st-from-bottom  legal">
           <h3 class="headline-7">LEGAL</h3>
           <div class="link">
             <a class="paragraph" href="#"><span data-hover="T’s & Cs">T’s & Cs</span></a>
@@ -58,7 +59,7 @@
             </a>
           </div>
         </div>
-        <div class="title-and-link navigation">
+        <div class="title-and-link iv-st-from-bottom  navigation">
           <h3 class="headline-7">NAVIGATION</h3>
           <div class="link">
             <a class="paragraph" href="#"><span data-hover="Health & Wellbeing">Health & Wellbeing</span></a>
@@ -74,6 +75,7 @@
     </div>
   </div>
 </footer>
+</div>
 <script src="./main.js"></script>
 
 
