--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -261,7 +261,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, form {
 // in footer
 .headline-7 {
     color: $zephyr-green;
-    font-family: $Freight;
+    font-family: $Sailec;
     font-size: size(12);
     font-weight: 500;
     letter-spacing: size(0.6);
