--- a/themes/zephyr/front-end/src/components/component-hero/index.html
+++ b/themes/zephyr/front-end/src/components/component-hero/index.html
@@ -10,13 +10,13 @@
   <div class="container">
     <div class="content">
       <h6 class="headline-6 word-up center">health & wellness</h6>
-      <h1 class="headline-1 real-line-up center">Lorem Ipsum dolor sit amut.</h1>
+      <h1 class="headline-1 word-up center">Lorem Ipsum dolor sit amut.</h1>
       <p class="paragraph real-line-up center">With deep industry knowledge and expertise in the emerging health and wellness space,
         our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new audiences
         via digital marketing, we have industry expertise to help you throughout your journey. </p>
     </div>
   </div>
-  <div class="down desktop-only">
+  <div class="down">
     <svg width="24" height="56" viewBox="0 0 24 56" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g clip-path="url(#clip0)">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z" fill="white"/>
