component-growth-guide done isa with animations

--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -141,7 +141,7 @@
                     with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
                     helpful for you.
                   </p>
-                  <p class="paragraph-1 small-fz word-up">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time members of staff.<span>In all cases we are assuming that the companies are
+                  <p class="paragraph-1 small-fz iv-st-from-bottom">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time members of staff.<span>In all cases we are assuming that the companies are
                   looking to grow organically without a huge amount of upfront investment and that therefore hiring agencies or building out a large marketing team is just simply not an option</span>.
                     Some examples might include:</p>
                 </div>
